# rewa

./: CMakeLists.txt  LICENSE  README.md  package.xml
devel/: .catkin  setup.sh
devel/include/rewa_msgs/: CommandServo.h  ControlCommandAX12A.h  ControlCommandMX28.h  Euler.h  EulerAngle.h  LegJoint.h  WalkOutput.h
devel/lib/pkgconfig/: rewa_hardware.pc  rewa_motion.pc  rewa_msgs.pc
devel/lib/python3/dist-packages/rewa_msgs/msg/: _CommandServo.py  _ControlCommandAX12A.py  _ControlCommandMX28.py  _Euler.py  _EulerAngle.py  _LegJoint.py  _WalkOutput.py  __init__.py
devel/lib/rewa_hardware/: servo_driver
devel/lib/rewa_motion/: rewa_motion_node  walk_engine
devel/share/rewa_hardware/cmake/: rewa_hardwareConfig.cmake
devel/share/rewa_motion/cmake/: rewa_motionConfig.cmake
devel/share/rewa_msgs/cmake/: rewa_msgs-msg-extras.cmake  rewa_msgs-msg-paths.cmake  rewa_msgsConfig.cmake
devel/share/roseus/ros/rewa_msgs/: manifest.l
src/rewa_hardware/: CMakeLists.txt  package.xml
src/rewa_hardware/include/rewa_hardware/: dynamixel_ax12.hpp  dynamixel_ax12a.hpp  dynamixel_mx28.hpp
src/rewa_hardware/src/: dynamixel_ax12.cpp  dynamixel_ax12a.cpp  dynamixel_mx28.cpp  serial_driver.cpp  serial_driver.py  servo_driver.cpp
src/rewa_motion/: CMakeLists.txt
src/rewa_motion/src/: .WalkEngine.cpp.swp  CubicSpline.cpp  HumanoidModel.cpp  IKWalk.cpp  LegIK.cpp  Polynom.cpp  Spline.cpp  WalkEngine.cpp  walk_engine.cpp
src/rewa_msgs/: CMakeLists.txt
src/rewa_msgs/msg/: CommandServo.msg  ControlCommandMX28.msg  LegJoint.msg  WalkOutput.msg
(+29 files in other folders)
