<?xml version="1.0"?>
<package format="2">
  <name>rewa_hardware</name>
  <version>0.0.0</version>
  <description>The rewa_hardware package</description>

  <maintainer email="wmhrdk@todo.todo">Wahyu Mahardika</maintainer>

  <license>BSD</license>

  <author email="wmhrdk@todo.todo">Wahyu Mahardika</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
